<resources>
    <string name="app_name">bilibili HD</string>
    <string name="search">Search</string>
    <string name="passe_again_to_quit">Passe again to quit</string>
    <string name="username">name</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="home">home</string>
    <string name="logout">Logout</string>
    <string name="logout_ask">Are you sure to LOGOUT?\nThis will cause the logged out LoginResponse to fail on all clients</string>
    <string name="history">history</string>
    <string name="fans">fans</string>
    <string name="watching">watching</string>
    <string name="like">like</string>
    <string name="dynamic">dynamic</string>
    <string name="submit">submit</string>
    <string name="favorite">favorite</string>
    <string name="content">contents</string>
    <string name="watched">watched</string>
    <string name="saved">saved</string>
    <string name="column">column</string>
    <string name="column_land">column land</string>
    <string name="inappropriate">inappropriate</string>
    <string name="download">download</string>
    <string name="check_cover">check cover</string>
    <string name="add_to_watch_later">add to watch later</string>
    <string name="download_manager" translatable="false">download manager</string>
    <string name="b_bi">B Bi</string>
    <string name="coins">coins</string>
    <string name="users">users</string>
    <string name="delete">delete</string>
    <string name="log_in_now">log in now</string>
    <string name="add">add</string>
    <string name="import_">import</string>
    <string name="export">export</string>
    <string name="bad_file">bad file</string>
    <string name="failure">failure</string>
    <string name="about">about</string>
    <string name="build_type">build type</string>
    <string name="project_home">project home</string>
    <string name="version">version</string>
    <string name="using_gpl_3.0">using GPL-3.0</string>
    <string name="project_home_url" translatable="false">https://github.com/duzhaokun123/BilibiliHD</string>
    <string name="logged_out">logged out</string>
    <string name="stop">stop</string>
    <string name="glide_cache">Glide cache first</string>
    <string name="open_in_browser">open in browser</string>
    <string name="request">request</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="danmaku">danmaku</string>
    <string name="num_fans">%d fans</string>
    <string name="intro">intro</string>
    <string name="comment_num">comment (%d)</string>
    <string name="ui_mod">UI mod</string>
    <string name="night_no">night no</string>
    <string name="night_yes">night yes</string>
    <string name="follow_system">follow_system</string>
    <string name="not_vip">not vip</string>
    <string name="send">send</string>
    <string name="search_bilibili">search bilibili</string>
    <string name="pip">pip</string>
    <string name="ad">ad</string>
    <string name="skip">skip</string>
    <string name="keep">keep</string>
    <string name="display">display</string>
    <string name="reload">reload</string>
    <string name="downloader">downloader</string>
    <string name="zero_is_default">0 = default</string>
    <string name="welcome_ads">welcome ADs</string>
    <string name="test">test</string>
    <string name="danmaku_test">danmaku test</string>
    <string name="danmaku_style">damaku style</string>
    <string name="none">none</string>
    <string name="shadow">shador</string>
    <string name="stroken">stroken</string>
    <string name="projection">projection</string>
    <string name="duplicate_merging">duplicate merging</string>
    <string name="text_size_coeff">text size coeff</string>
    <string name="line_height">line height</string>
    <string name="danmaku_drawing">danmaku drawing</string>
    <string name="danmaku_duration_coeff">danmaku duration coeff</string>
    <string name="maximum_visible_size_in_screen">maximum visible size in screen</string>
    <string name="minus_one_is_auto_zero_is_unlimited">-1 = auto\n0 = unlimited</string>
    <string name="allow_all_ads">allow all ADs</string>
    <string name="add_to_history">add to history</string>
    <string name="auto_recording_history">auto recording history</string>
    <string name="play">play</string>
    <string name="imported">imported</string>
    <string name="exported">exported</string>
    <string name="max">max</string>
    <string name="default_">default</string>
    <string name="quality">quality</string>
    <string name="play_background">play background</string>
    <string name="retry">retry</string>
    <string name="play_settings">play settings</string>
    <string name="finish">finish</string>
    <string name="sync">sync</string>
    <string name="danmaku_settings">danmaku settings</string>
    <string name="last_time_view_to_dp_s">last time view to %dP %s</string>
    <string name="jump">jump</string>
    <string name="block">block</string>
    <string name="block_by_place">block by place</string>
    <string name="top">top</string>
    <string name="bottom">bottom</string>
    <string name="r2l">right to left</string>
    <string name="l2r">left to right</string>
    <string name="special">special</string>
    <string name="user_space_use_web_view">user space use WebView</string>
    <string name="allow_danmaku_overlapping">allow danmaku overlapping</string>
    <string name="share">share</string>
    <string name="connection_to_s">connection to: %s</string>
    <string name="action">action</string>
    <string name="hashtagd" translatable="false">#%d</string>
    <string name="dislike">dislike</string>
    <string name="reply">reply</string>
    <string name="cancel_action">cancel action</string>
    <string name="liked">liked</string>
    <string name="disliked">disliked</string>
    <string name="deleted">deleted</string>
    <string name="report">report</string>
    <string name="no_action">no action</string>
    <string name="canceled">canceled</string>
    <string name="top2">top</string>
    <string name="self_made">self made</string>
    <string name="added_coin_d">added coin %d</string>
    <string name="favorited_s">favorited: %s</string>
    <string name="cant_pass_geetest">bilibili HD can\'t pass Geetest\nPlease wait a few hours to a few days, or change your IP address and try again\nIf you still can\'t log in, please try to get the LoginResponse through packet capture</string>
    <string name="desktop_ua">desktop UA</string>
    <string name="child_reply">child reply</string>
    <string name="check_dialog">check dialog</string>
    <string name="saved_to_s">saved to %s</string>
    <string name="official_app_download_dir">official app download dir</string>
    <string name="visibility">visibility</string>
    <string name="visible">visible</string>
    <string name="invisible">invisible</string>
    <string name="no_load">no load</string>
    <string name="sync_danmaku_progress">sync danmaku progress</string>
    <string name="refresh">refresh</string>
    <string name="custom">custom</string>
    <string name="expired">expired</string>
    <string name="disable_welcome_screen">disable welcome screen</string>
    <string name="added">added</string>
    <string name="tools">tools</string>
    <string name="unshareable">unshareable</string>
    <string name="share_to">share to</string>
    <string name="live_use_web_view">live use web view</string>
    <string name="auth_to_export">Authentication to export</string>
    <string name="live">live</string>
    <string name="main_line">main line</string>
    <string name="spare_line_d">spare line %d</string>
    <string name="open_with_webview">open with WebView</string>
    <string name="draw_debug_info">draw debug info</string>
    <string name="clean_danmaku_cache">clean danmaku cache</string>
    <string name="margin_top">margin top</string>
    <string name="margin_bottom">margin bottom</string>
    <string name="font">font</string>
    <string name="file">file</string>
    <string name="build_time">build time</string>
    <string name="user_space">user space</string>
    <string name="expires_in">expires in</string>
</resources>
