<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/open_in_browser"
        android:icon="@drawable/ic_launch"
        android:title="@string/open_in_browser"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/pip"
        android:title="@string/pip" />

    <item
        android:id="@+id/check_cover"
        android:title="@string/check_cover"
        app:showAsAction="never" />

    <item
        android:id="@+id/download"
        android:title="@string/download"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_to_history"
        android:title="@string/add_to_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/retry"
        android:title="@string/retry"
        app:showAsAction="never" />

    <item
        android:id="@+id/play_settings"
        android:title="@string/play_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/danmaku_settings"
        android:title="@string/danmaku_settings"
        app:showAsAction="never" />
</menu>