<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:fragment="com.duzhaokun123.bilibilihd.ui.settings.SettingsUsersFragment"
        app:icon="@drawable/ic_account_circle"
        app:title="@string/users" />
    <Preference
        app:fragment="com.duzhaokun123.bilibilihd.ui.settings.SettingsDisplayFragment"
        app:title="@string/display" />
    <Preference
        app:fragment="com.duzhaokun123.bilibilihd.ui.settings.SettingsDownloadFragment"
        app:icon="@drawable/ic_dl"
        app:title="@string/download" />
    <Preference
        app:fragment="com.duzhaokun123.bilibilihd.ui.settings.AboutFragment"
        app:icon="@drawable/ic_info"
        app:title="@string/about" />
</PreferenceScreen>