<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_mod" />

        <RadioGroup
            android:id="@+id/rg_uiMod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_night_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night_no" />

            <RadioButton
                android:id="@+id/rb_night_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night_yes" />

            <RadioButton
                android:id="@+id/rb_night_follow_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follow_system" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column" />

        <EditText
            android:id="@+id/et_column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/column"
            android:inputType="number"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_land" />

        <EditText
            android:id="@+id/et_columnLand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/column_land"
            android:inputType="number"
            android:maxLines="1" />
    </LinearLayout>
</layout>
