<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                tools:ignore="ContentDescription" />

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/pv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                app:use_controller="false" />

            <Button
                android:id="@+id/btn_skip"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/skip"
                android:textColor="@color/ordinaryText" />

            <Button
                android:id="@+id/btn_keep"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@id/btn_skip"
                android:text="@string/keep"
                android:textColor="@color/ordinaryText" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_text"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            tools:context=".ui.welcome.WelcomeActivity">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="256dp"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/imageView"
                android:layout_marginStart="-180dp"
                android:layout_toEndOf="@+id/imageView"
                android:text="@string/app_name"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_below="@id/textView2"
                android:layout_marginStart="-180dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/imageView"
                android:text="version"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/ad"
                android:visibility="invisible"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>
</layout>