<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.userspace.UserSpaceActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_spaceImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_face"
            android:layout_width="@dimen/face_size"
            android:layout_height="@dimen/face_size"
            android:layout_below="@id/iv_spaceImage"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="-8dp"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/civ_face"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_sex"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_below="@id/civ_face"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/tv_name" />

        <ImageView
            android:id="@+id/iv_level"
            android:layout_width="@dimen/level_size"
            android:layout_height="@dimen/level_size"
            android:layout_below="@id/civ_face"
            android:layout_marginStart="5dp"
            android:layout_marginTop="18dp"
            android:layout_toEndOf="@id/iv_sex" />

        <TextView
            android:id="@+id/tv_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:textIsSelectable="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_spaceImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_fans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fans"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_watching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watching"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like"
                    android:textAllCaps="true" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_sign"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:theme="@style/AppTheme.Navigation"
            app:tabGravity="center" />
    </RelativeLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.userspace.UserSpaceActivity" />

</LinearLayout>